# records-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/data_lens/: __init__.py  app.py  cli.py  data_lens.py  loaders.py  schemas.py
src/records_analyser/: __init__.py  api.py  app.py  cli.py  data_lens.py  exceptions.py  loaders.py  manifest.py  profiler.py  records_analyser.py
tests/: conftest.py  test_app.py  test_data_lens.py  test_invariants.py  test_profiler.py  test_public_api.py  test_records_analyser.py
