[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "records-analyser"
version = "0.2.1"
description = "Structured data profiling for the analyser family"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "PyYAML>=6.0.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
records-analyser = "records_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/records_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real models or heavy data — opt-in with `pytest -m slow`",
]
